--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -2,4 +2,18 @@
     <string name="app_name">android</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <!-- login && signup  -->
+    <string name="signup_text">회원가입</string>
+    <string name="login_text">로그인</string>
+    <string name="email">
+        이메일
+    </string>
+    <string name="email_hint">이메일</string>
+    <string name="passwordfind_text">비밀번호찾기</string>
+    <string name="password">비밀번호</string>
+    <string name="password_hint">비밀번호 입력</string>
+    <string name="password_check">비밀번호 확인</string>
+    <string name="duplicate_check">중복확인</string>
+    <string name="nickname">애칭</string>
 </resources>
