--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -6,9 +6,7 @@
     <!-- login && signup  -->
     <string name="signup_text">회원가입</string>
     <string name="login_text">로그인</string>
-    <string name="email">
-        이메일
-    </string>
+    <string name="email">이메일</string>
     <string name="email_hint">이메일</string>
     <string name="passwordfind_text">비밀번호찾기</string>
     <string name="password">비밀번호</string>
@@ -16,4 +14,5 @@
     <string name="password_check">비밀번호 확인</string>
     <string name="duplicate_check">중복확인</string>
     <string name="nickname">애칭</string>
+    <string name="nickname_hint">늘곰, 귀요미 등</string>
 </resources>
