FE_221020_board : 게시판 디자인 완료
Former-commit-id: 1263f234eeea7fc1797015b4cae039dedf5a1f24

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -26,6 +26,10 @@
     <string name="boardcontent2">I believe in myself.</string>
     <string name="boardcontent3">Each day is a new opportunity to grow and be a better version of myself.</string>
 
+    <!-- 게시판 답글수> -->
+    <string name="commentCount1">45</string>
+    <string name="commentCount2">23</string>
+    <string name="commentCount3">44</string>
 
 
 </resources>
