--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -11,4 +11,6 @@
     <string name="confirm">확인</string>
     <string name="add_album_msg">새로운 앨범의 이름을 입력해주세요.</string>
     <string name="add_album_hint">앨범명을 입력해주세요.</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
