--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -6,6 +6,11 @@
     <string name="notification">알림</string>
     <string name="album">앨범</string>
     <string name="board">게시판</string>
+    <string name="mission_top">매일 가족과 함께 친목도 포인트도!!</string>
+    <string name="mission1_title">오늘의 백문백답</string>
+    <string name="mission1_content">백문백답 미션에 참여해보세요!</string>
+    <string name="mission2_title">오늘의 편지</string>
+    <string name="mission2_content">편지쓰기 미션을 해보세요!</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
