--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,12 +1,22 @@
 <resources>
-    <string name="app_name">android</string>
-    <string name="home">홈</string>
-    <string name="record">기록</string>
-    <string name="calendar">캘린더</string>
-    <string name="notification">알림</string>
-    <string name="album">앨범</string>
-    <string name="board">게시판</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="add_calendar_hint" />
+<string name="app_name">android</string>
+<string name="home">홈</string>
+<string name="record">기록</string>
+<string name="calendar">캘린더</string>
+<string name="notification">알림</string>
+<string name="album">앨범</string>
+<string name="board">게시판</string>
+<string name="new_album">새로운 앨범</string>
+<string name="cancel">취소</string>
+<string name="confirm">확인</string>
+<string name="add_album_msg">새로운 앨범의 이름을 입력해주세요.</string>
+<string name="add_album_hint">앨범명을 입력해주세요.</string>
+<string name="new_calendar">할 일 추가</string>
+<string name="add_calendar_hint">"일정을 입력하세요"</string>
+<string name="textView_start_date">"gg"</string>
+<string name="textView_end_date">"dd"</string>
+
+
+<!-- TODO: Remove or change this placeholder text -->
+<string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
