--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -6,7 +6,8 @@
     <string name="notification">알림</string>
     <string name="album">앨범</string>
     <string name="board">게시판</string>
-    <string name="new_calendar">할 일 추가</string><string name="start_calendar">시작 날짜</string>
+    <string name="new_calendar">할 일 추가</string>
+    <string name="start_calendar">시작 날짜</string>
     <string name="add_calendar_hint">"일정을 입력하세요"</string>
     <string name="home_logo">ZIP</string>
     <string name="home_family_title">행복한 우리 가조쿠</string>
@@ -61,4 +62,6 @@
     <string name="duplicate_check">중복확인</string>
     <string name="nickname">애칭</string>
     <string name="nickname_hint">늘곰, 귀요미 등</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
