--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -64,4 +64,13 @@
     <string name="nickname_hint">늘곰, 귀요미 등</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <!-- spinner    -->
+    <string name="selected_item">Selected item:</string>
+
+    <string-array name="spinner_letter_to">
+        <item>엄마</item>
+        <item>아빠</item>
+        <item>형</item>
+    </string-array>
 </resources>
