--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -61,4 +61,5 @@
     <string name="room_message"><u>아직 초대된 방이 없으신가요?</u></string>
     <string name="notification_channel_id">ZIP_ID</string>
     <string name="msg_token_fmt" translatable="false">토큰 : %s</string>
+    <string name="game_view_content_description">Game View</string>
 </resources>
