--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -47,6 +47,7 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="family_code_clipboard">클립보드에 복사되었습니다.</string>
+    <string name="select_character">캐릭터 선택</string>
 
     <!-- spinner    -->
     <string name="selected_item">Selected item:</string>
