--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -47,7 +47,8 @@
     <string name="nickname">애칭</string>
     <string name="nickname_hint">늘곰, 귀요미 등</string>
     <string name="family_code_clipboard">클립보드에 복사되었습니다.</string>
-    <string name="select_character">캐릭터 선택</string>
+    <string name="select_character_header">캐릭터 선택</string>
+    <string name="select_character">선택하기</string>
 
     <!-- modify -->
     <string name="modify_fragment">회원정보 수정</string>
